[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["jfernando-1964"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
unicorn = "^2.0.1.post1"
requests = "^2.31.0"
aiohttp = "^3.9.3"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
